--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon May  7 16:10:39 2018</p>
+         Last Run: Mon May  7 16:15:19 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Calgary West SC GU 17 A - Shouldice  Stampeder (Shouldice Athletic Park)</H1>
                <H4 style="color:rgb(140,140,140)" class="text-left">Starts: Mon May  7 20:15:00 2018</H4>
                <H4 style="color:rgb(140,140,140)" class="text-left">Ends: Mon May  7 21:45:00 2018</H4>
@@ -224,13 +224,13 @@
                   var MyNewChart = new Chart(ctx).BarAlt(data,options);
                   document.getElementById("legend_chartHTMLReportGenerator2").innerHTML=MyNewChart.generateLegend();
                </script>
-         <img scr="http://www.wmiradar.com/alberta/latest_loop.gif">
+         <img src="http://www.wmiradar.com/alberta/latest_loop.gif">
          <hr style="border-width:5px ">
       </div>
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon May  7 16:10:39 2018</p>
+         Last Run: Mon May  7 16:15:19 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-left">Starts: Tue May  8 19:30:00 2018</H4>
                <H4 style="color:rgb(140,140,140)" class="text-left">Ends: Tue May  8 21:00:00 2018</H4>
@@ -431,7 +431,227 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon May  7 16:10:39 2018</p>
+         Last Run: Mon May  7 16:15:19 2018</p>
+               <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Fred Seymour / École Notre-Dame-de-la-Paix</H1>
+               <H4 style="color:rgb(140,140,140)" class="text-left">Starts: Sat May 12 12:00:00 2018</H4>
+               <H4 style="color:rgb(140,140,140)" class="text-left">Ends: Sat May 12 13:30:00 2018</H4>
+               <table class="table table-striped">
+                  <thead>
+                     <tr>
+                        <th>Forecast Time</th>
+                        <th>Summary</th>
+                        <th>Temperture (°C)</th>
+                        <th>Feels Like (°C)</th>
+                        <th>POP (%)</th>
+                        <th>Humidity (%)</th>
+                        <th>UV</th>
+                        <th>Wind (km/hr)</th>
+                        <th>Wind Dir.</th>
+                        <th>Cloud Cover (%)</th>
+                     </tr>
+                  </thead>
+                  <tbody>
+                     <tr>
+                        <td>11:00 AM</td>
+                        <td>Clear</td>
+                        <td>17</td>
+                        <td>17</td>
+                        <td>0</td>
+                        <td>32</td>
+                        <td>4</td>
+                        <td>11</td>
+                        <td>NW</td>
+                        <td>4</td>
+                     </tr>
+                     <tr>
+                        <td>12:00 PM</td>
+                        <td>Clear</td>
+                        <td>18</td>
+                        <td>18</td>
+                        <td>0</td>
+                        <td>27</td>
+                        <td>5</td>
+                        <td>11</td>
+                        <td>NNW</td>
+                        <td>3</td>
+                     </tr>
+                     <tr>
+                        <td>01:00 PM</td>
+                        <td>Clear</td>
+                        <td>18</td>
+                        <td>18</td>
+                        <td>0</td>
+                        <td>24</td>
+                        <td>6</td>
+                        <td>11</td>
+                        <td>NNW</td>
+                        <td>7</td>
+                     </tr>
+                     <tr>
+                        <td>02:00 PM</td>
+                        <td>Clear</td>
+                        <td>19</td>
+                        <td>19</td>
+                        <td>0</td>
+                        <td>25</td>
+                        <td>6</td>
+                        <td>10</td>
+                        <td>NNW</td>
+                        <td>12</td>
+                     </tr>
+                  </tbody>
+               </table>
+               </style>
+               <div class="container-fluid">
+               	<div class="row">
+               		<div class="col-xs-8" style="text-align:center"><canvas id="chartHTMLReportGenerator5"></canvas><p><small>Date/Time</small></p></div>
+               		<div class="col-xs-4" id="legend_chartHTMLReportGenerator5" style="padding-left:75px;padding-top:25px"></div>
+               	</div>
+               </div>
+               <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.min.js"></script>
+               <script>
+               Chart.types.Line.extend({
+         name: "LineAlt",
+         draw: function () {
+         Chart.types.Line.prototype.draw.apply(this, arguments);
+         var ctx = this.chart.ctx;
+         ctx.save();
+         ctx.textAlign = "center";
+         ctx.textBaseline = "bottom";
+         ctx.fillStyle = this.options.scaleFontColor;
+         this.scale.xScalePaddingLeft=100;
+         var x = this.scale.xScalePaddingLeft * 0.4;
+         var y = this.chart.height / 2;
+         ctx.translate(x, y);
+         ctx.rotate(-90 * Math.PI / 180);
+         ctx.fillText("Temp (C)", 0, 0);
+         ctx.restore();
+         }});
+                  var ctx = document.getElementById("chartHTMLReportGenerator5").getContext("2d");
+                  var data ={
+           "labels":[
+             "11:00 AM",
+             "12:00 PM",
+             "01:00 PM",
+             "02:00 PM"
+           ],
+           "datasets":[
+             {
+               "label":"apparentTemperature",
+               "strokeColor":"rgba(92,0,141,1)",
+               "pointColor":"rgba(92,0,141,1)",
+               "fillColor":"rgba(92,0,141,0)",
+               "data":[
+                 "17",
+                 "18",
+                 "18",
+                 "19"
+               ]
+             },
+             {
+               "label":"temperature",
+               "strokeColor":"rgba(252,49,18,1)",
+               "pointColor":"rgba(252,49,18,1)",
+               "fillColor":"rgba(252,49,18,0)",
+               "data":[
+                 "17",
+                 "18",
+                 "18",
+                 "19"
+               ]
+             }
+           ]
+         };
+                  var options = { responsive:true,
+                  				  multiTooltipTemplate: "<%=datasetLabel%> : <%= value %>",
+                    			      legendTemplate : '<% for (var i=0; i<datasets.length; i++) { %><div style=\"background-color:<%=datasets[i].fillColor%>;width:25px;height:25px;border-style:solid;border-color:<%=datasets[i].strokeColor%>;margin:5px\"><span style="color:rgba(0,0,0,0)">____</span><span><small><% if (datasets[i].label) { %><%= datasets[i].label %><% } %></small></span></div><% } %>'
+                                   };
+                  var MyNewChart = new Chart(ctx).LineAlt(data,options);
+                  document.getElementById("legend_chartHTMLReportGenerator5").innerHTML=MyNewChart.generateLegend();
+               </script>
+               </style>
+               <div class="container-fluid">
+               	<div class="row">
+               		<div class="col-xs-8" style="text-align:center"><canvas id="chartHTMLReportGenerator6"></canvas><p><small>Date/Time</small></p></div>
+               		<div class="col-xs-4" id="legend_chartHTMLReportGenerator6" style="padding-left:75px;padding-top:25px"></div>
+               	</div>
+               </div>
+               <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.min.js"></script>
+               <script>
+               Chart.types.Bar.extend({
+         name: "BarAlt",
+         draw: function () {
+         Chart.types.Bar.prototype.draw.apply(this, arguments);
+         var ctx = this.chart.ctx;
+         ctx.save();
+         ctx.textAlign = "center";
+         ctx.textBaseline = "bottom";
+         ctx.fillStyle = this.options.scaleFontColor;
+         this.scale.xScalePaddingLeft=100;
+         var x = this.scale.xScalePaddingLeft * 0.4;
+         var y = this.chart.height / 2;
+         ctx.translate(x, y);
+         ctx.rotate(-90 * Math.PI / 180);
+         ctx.fillText("Percentage (%)", 0, 0);
+         ctx.restore();
+         }});
+                  var ctx = document.getElementById("chartHTMLReportGenerator6").getContext("2d");
+                  var data ={
+           "labels":[
+             "11:00 AM",
+             "12:00 PM",
+             "01:00 PM",
+             "02:00 PM"
+           ],
+           "datasets":[
+             {
+               "label":"precipProbability",
+               "strokeColor":"rgba(0,0,255,1)",
+               "fillColor":"rgba(0,0,255,0.5)",
+               "data":[
+                 "0",
+                 "0",
+                 "0",
+                 "0"
+               ]
+             },
+             {
+               "label":"humidity",
+               "strokeColor":"rgba(40,177,255,1)",
+               "fillColor":"rgba(40,177,255,0.5)",
+               "data":[
+                 "32",
+                 "27",
+                 "24",
+                 "25"
+               ]
+             },
+             {
+               "label":"cloudCover",
+               "strokeColor":"rgba(233,37,255,1)",
+               "fillColor":"rgba(233,37,255,0.5)",
+               "data":[
+                 "4",
+                 "3",
+                 "7",
+                 "12"
+               ]
+             }
+           ]
+         };
+                  var options = { responsive:true,
+                  				  multiTooltipTemplate: "<%=datasetLabel%> : <%= value %>",
+                    			      legendTemplate : '<% for (var i=0; i<datasets.length; i++) { %><div style=\"background-color:<%=datasets[i].fillColor%>;width:25px;height:25px;border-style:solid;border-color:<%=datasets[i].strokeColor%>;margin:5px\"><span style="color:rgba(0,0,0,0)">____</span><span><small><% if (datasets[i].label) { %><%= datasets[i].label %><% } %></small></span></div><% } %>'
+                                   };
+                  var MyNewChart = new Chart(ctx).BarAlt(data,options);
+                  document.getElementById("legend_chartHTMLReportGenerator6").innerHTML=MyNewChart.generateLegend();
+               </script>
+         <hr style="border-width:5px ">
+      </div>
+      <div style="padding:10px;border: 1px none black">
+         <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
+         <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
+         Last Run: Mon May  7 16:15:19 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-left">Starts: Sat May 12 13:15:00 2018</H4>
                <H4 style="color:rgb(140,140,140)" class="text-left">Ends: Sat May 12 14:45:00 2018</H4>
@@ -504,8 +724,8 @@
                </style>
                <div class="container-fluid">
                	<div class="row">
-               		<div class="col-xs-8" style="text-align:center"><canvas id="chartHTMLReportGenerator5"></canvas><p><small>Date/Time</small></p></div>
-               		<div class="col-xs-4" id="legend_chartHTMLReportGenerator5" style="padding-left:75px;padding-top:25px"></div>
+               		<div class="col-xs-8" style="text-align:center"><canvas id="chartHTMLReportGenerator7"></canvas><p><small>Date/Time</small></p></div>
+               		<div class="col-xs-4" id="legend_chartHTMLReportGenerator7" style="padding-left:75px;padding-top:25px"></div>
                	</div>
                </div>
                <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.min.js"></script>
@@ -527,7 +747,7 @@
          ctx.fillText("Temp (C)", 0, 0);
          ctx.restore();
          }});
-                  var ctx = document.getElementById("chartHTMLReportGenerator5").getContext("2d");
+                  var ctx = document.getElementById("chartHTMLReportGenerator7").getContext("2d");
                   var data ={
            "labels":[
              "12:00 PM",
@@ -567,13 +787,13 @@
                     			      legendTemplate : '<% for (var i=0; i<datasets.length; i++) { %><div style=\"background-color:<%=datasets[i].fillColor%>;width:25px;height:25px;border-style:solid;border-color:<%=datasets[i].strokeColor%>;margin:5px\"><span style="color:rgba(0,0,0,0)">____</span><span><small><% if (datasets[i].label) { %><%= datasets[i].label %><% } %></small></span></div><% } %>'
                                    };
                   var MyNewChart = new Chart(ctx).LineAlt(data,options);
-                  document.getElementById("legend_chartHTMLReportGenerator5").innerHTML=MyNewChart.generateLegend();
+                  document.getElementById("legend_chartHTMLReportGenerator7").innerHTML=MyNewChart.generateLegend();
                </script>
                </style>
                <div class="container-fluid">
                	<div class="row">
-               		<div class="col-xs-8" style="text-align:center"><canvas id="chartHTMLReportGenerator6"></canvas><p><small>Date/Time</small></p></div>
-               		<div class="col-xs-4" id="legend_chartHTMLReportGenerator6" style="padding-left:75px;padding-top:25px"></div>
+               		<div class="col-xs-8" style="text-align:center"><canvas id="chartHTMLReportGenerator8"></canvas><p><small>Date/Time</small></p></div>
+               		<div class="col-xs-4" id="legend_chartHTMLReportGenerator8" style="padding-left:75px;padding-top:25px"></div>
                	</div>
                </div>
                <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.min.js"></script>
@@ -595,7 +815,7 @@
          ctx.fillText("Percentage (%)", 0, 0);
          ctx.restore();
          }});
-                  var ctx = document.getElementById("chartHTMLReportGenerator6").getContext("2d");
+                  var ctx = document.getElementById("chartHTMLReportGenerator8").getContext("2d");
                   var data ={
            "labels":[
              "12:00 PM",
@@ -644,7 +864,7 @@
                     			      legendTemplate : '<% for (var i=0; i<datasets.length; i++) { %><div style=\"background-color:<%=datasets[i].fillColor%>;width:25px;height:25px;border-style:solid;border-color:<%=datasets[i].strokeColor%>;margin:5px\"><span style="color:rgba(0,0,0,0)">____</span><span><small><% if (datasets[i].label) { %><%= datasets[i].label %><% } %></small></span></div><% } %>'
                                    };
                   var MyNewChart = new Chart(ctx).BarAlt(data,options);
-                  document.getElementById("legend_chartHTMLReportGenerator6").innerHTML=MyNewChart.generateLegend();
+                  document.getElementById("legend_chartHTMLReportGenerator8").innerHTML=MyNewChart.generateLegend();
                </script>
          <hr style="border-width:5px ">
       </div>
